# bus-seating

./: .gitignore  .~lock.example_data_unformatted.csv#  ARCHITECTURE.md  PLAN.md  build-tauri.sh  main.py  pyproject.toml  run_backend.py
.github/workflows/: ci.yml  release.yml
app/: config.py  database.py  main.py
app/models/: db.py
app/routers/: assignments.py  bus_templates.py  buses.py  days.py  groups.py  seasons.py
app/schemas/: assignment.py  bus.py  day.py  group.py  season.py
app/services/: assignment.py  pdf_export.py
app/solver/: converter.py  engine.py  types.py
frontend/: angular.json  karma.conf.js  package-lock.json  package.json
frontend/src/: styles.scss
frontend/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/config/: constraint-config.component.spec.ts  constraint-config.component.ts
frontend/src/app/core/: api.service.spec.ts  api.service.ts  error.interceptor.ts  models.ts  season-config.service.ts  theme.service.ts
frontend/src/app/days/: day-list.component.spec.ts  day-list.component.ts
frontend/src/app/groups/: group-list.component.spec.ts  group-list.component.ts
frontend/src/app/seasons/: season-detail.component.ts  season-list.component.spec.ts  (+1 more)
scripts/: build-backend.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: conftest.py
tests/test_api/: test_assignments.py  test_bus_templates.py  test_csv_import.py  test_person_absences.py  test_seasons.py
tests/test_solver/: test_engine.py
(+7 files in other folders)
