[package]
name = "bus-seating"
version = "0.1.0"
description = "Bus Seating Planner for ski trips"
authors = ["Jan"]
edition = "2021"

[lib]
name = "bus_seating_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-open"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
